// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FUNC - months generates list of 12 months 1`] = `
Array [
  "01",
  "02",
  "03",
  "04",
  "05",
  "06",
  "07",
  "08",
  "09",
  "10",
  "11",
  "12",
]
`;

exports[`FUNC - monthsOptions generates list of months options 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "MM",
    "value": "MM",
  },
  Object {
    "label": "01",
    "value": "01",
  },
  Object {
    "label": "02",
    "value": "02",
  },
  Object {
    "label": "03",
    "value": "03",
  },
  Object {
    "label": "04",
    "value": "04",
  },
  Object {
    "label": "05",
    "value": "05",
  },
  Object {
    "label": "06",
    "value": "06",
  },
  Object {
    "label": "07",
    "value": "07",
  },
  Object {
    "label": "08",
    "value": "08",
  },
  Object {
    "label": "09",
    "value": "09",
  },
  Object {
    "label": "10",
    "value": "10",
  },
  Object {
    "label": "11",
    "value": "11",
  },
  Object {
    "label": "12",
    "value": "12",
  },
]
`;

exports[`FUNC - yearsOptions generates list of next 10 years from given date 1`] = `
Array [
  Object {
    "disabled": true,
    "label": "YY",
    "value": "YY",
  },
  Object {
    "label": "98",
    "value": "98",
  },
  Object {
    "label": "99",
    "value": "99",
  },
  Object {
    "label": "00",
    "value": "00",
  },
  Object {
    "label": "01",
    "value": "01",
  },
  Object {
    "label": "02",
    "value": "02",
  },
  Object {
    "label": "03",
    "value": "03",
  },
  Object {
    "label": "04",
    "value": "04",
  },
  Object {
    "label": "05",
    "value": "05",
  },
  Object {
    "label": "06",
    "value": "06",
  },
  Object {
    "label": "07",
    "value": "07",
  },
  Object {
    "label": "08",
    "value": "08",
  },
]
`;
